Fixed alignement& colors in searchmode, reduces vertical size on search

--- a/ShoppingList/web/css/searchmode.css
+++ b/ShoppingList/web/css/searchmode.css
@@ -1,8 +1,12 @@
+#searchform{
+    min-width: 50px;
+}
+
 #custom-search .search-query {
     outline: none;
     padding: 15px;
     width: 50px;
-    height: 50px;
+    height: 40px;
     border: 2px solid transparent;
     background-color: transparent;
     color: transparent;
@@ -98,13 +102,13 @@
 }
 
 /* inizio sezione filter */
-#filterbutton {
-    background-color: rgba(32, 52, 232, 0.68) !important;
+#filterbutton, #sortbybutton{
+  //  background-color: rgba(32, 52, 232, 0.68) !important;
 
 }
 /* dropdown */
 
-.dropbtn {
+.dropbtn  {
     background-color: #5067c2;;
     color: white;
     padding: 4px;
